Issue #5175: PyLong_AsUnsignedLongLong now raises OverflowError for negative arguments.  Previously, it raised TypeError.

Thanks Lisandro Dalcin.